Delete a collection recursive

Since Akonadi server does not support hierarchical remote
identifiers in delete notifications, we have to ignore the notifications
for child collections/items and remove the requested imap folder recursivly
on the IMAP server.

BUG: 255465

svn path=/trunk/KDE/kdepim/runtime/; revision=1208084